--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -432,7 +432,7 @@ html, ul, li, span {
     -webkit-animation: show-current 1s cubic-bezier(0,1,.3,1) forwards;
     animation: show-current 1s cubic-bezier(0,1,.3,1) forwards;
     cursor: default;
-    left: 8%;
+    left: 54px;
     opacity: 1;
 }
 
@@ -714,10 +714,13 @@ html[data-next="2"] .step-bg-container {
 }
 
 .actions-text-container {
-    left: 10%;
+    bottom: 0;
+  height: 100%;
+    left: 64px;
+  max-width: 100%;
   position: absolute;
-    right: 32%;
-    top: 32%;
+    right: 260px;
+    top: 0;
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
 
@@ -727,20 +730,32 @@ html[data-next="2"] .step-bg-container {
 }
 
 .actions-text-container .actions-text {
+    display: none;
     font-size: 12.5px;
     line-height: 1.5;
     opacity: 0;
     position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
     transition: all .2s ease-out;
 }
 
 .actions-text-container .actions-text.current {
+    display: block;
     opacity: 1;
 }
 
 .cssanimations .actions-text.current {
   -webkit-animation: show-actions-text 1s cubic-bezier(0,1,.3,1);
-          animation: show-actions-text 1s cubic-bezier(0,1,.3,1); 
+          animation: show-actions-text 1s cubic-bezier(0,1,.3,1);
+}
+
+html[data-prev="1"] .actions-text-container {
+  left: 38px;
+}
+html[data-prev="2"] .actions-text-container {
+  left: 56px;
 }
 
 /* Play button */
@@ -899,7 +914,7 @@ html[data-prev="2"] .brew-guide-button {
   display: -ms-flexbox;
   display: flex;
   position: absolute;
-    right: 19%;
+    right: 139px;
     top: 22px;
   width: 102px;
 }
