--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -301,7 +301,7 @@ $exponential-ease: cubic-bezier(0,1,.3,1);
   .current {
     animation: show-current 1s $exponential-ease forwards;
     cursor: default;
-    left: 8%;
+    left: 54px;
     opacity: 1;
 
     .step-title {
@@ -581,28 +581,42 @@ html[data-next="2"] .step-bg-container {
 }
 
 .actions-text-container {
+  height: 100%;
+  max-width: 100%;
   transform-style: preserve-3d;
   perspective: 800px;
   position: absolute;
-    left: 10%;
-    top: 32%;
-    right: 32%;
+    left: 64px;
+    top: 0;
+    right: 260px;
+    bottom: 0;
 
   .actions-text {
+    display: none;
     font-size: 12.5px;
     line-height: 1.5;
     position: absolute;
+      top: 50%;
+    transform: translateY(-50%);
     opacity: 0;
     transition: all .2s ease-out;
   }
 
   .actions-text.current {
+    display: block;
     opacity: 1;
   }
 }
 
 .cssanimations .actions-text.current {
-  animation: show-actions-text 1s $exponential-ease; 
+  animation: show-actions-text 1s $exponential-ease;
+}
+
+html[data-prev="1"] .actions-text-container {
+  left: 38px;
+}
+html[data-prev="2"] .actions-text-container {
+  left: 56px;
 }
 
 /* Play button */
@@ -761,7 +775,7 @@ html[data-prev="2"] .brew-guide-button {
 
 .autoplay-container {
   position: absolute;
-    right: 19%;
+    right: 139px;
     top: 22px;
   width: 102px;
   display: flex;
